Fix weird spacing on mobile

--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@
 
 body {
   max-width: 750px;
+  padding: 7px;
   margin: 4em auto;
   min-height: fit-content;
 }
